Spacing fix

--- a/src/css/_specific.less
+++ b/src/css/_specific.less
@@ -13,6 +13,11 @@
 
     @media @med-under-md { font-size: 2.25em; }
   }
+  &__hello {
+    font-weight: normal;
+    font-size: large;
+    display: block;
+  }
   &__subtitle {
     margin-top: @box-space;
     @animations: fadein, moveup;
