--- a/src/css/_utils.less
+++ b/src/css/_utils.less
@@ -40,12 +40,7 @@ svg { fill: currentColor; height: 100%; width: 100%; }
 }
 
 .mt { margin-top: @section-y-margin; }
-.mt-0 { margin-top: 0; }
 .mt-sm { margin-top: @box-space; }
-
-.font-larger { font-size: x-large; }
-.font-lighter { color: @font-color-lighter; }
-.font-weight-normal { font-weight: normal; }
 
 .d-none-under-md { @media @med-under-md { display: none; } }
 .d-none-md { @media @med-md { display: none; } }
